# Lab4-bd2

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: instrucciones.md  roadmap.md  todos.md
scripts/: ingest.py  verify.py
src/aggregations/: queries.py
src/config/: settings.py
src/ingestion/: bulk_writer.py  indexes.py  loader.py
src/models/: sale.py
